# sell-signal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sell_signal/: config.py  prioritize.py  provider.py  schema.py  sheet_store.py  web.py
src/sell_signal/static/: styles.css
src/sell_signal/templates/: _result_section.html  index.html
tests/: test_ci_contract.py  test_provider.py  test_sheet_store.py  test_web.py
