[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sell-signal"
version = "0.1.0"
description = "Hosted-model resale triage tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
sell-signal-web = "sell_signal.web:run"

[tool.hatch.build.targets.wheel]
packages = ["src/sell_signal"]
include = [
  "/src/sell_signal/templates/**/*",
  "/src/sell_signal/static/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
